Modificação de layout
Retirar texto e maps do banner e criar uma seção abaixo do banner

--- a/src/app/pages/factory/factory.component.html
+++ b/src/app/pages/factory/factory.component.html
@@ -2,35 +2,38 @@
 <div class="factory premag-xl-margin-top-48" id="factory">
     <div class="w-100">
         <div class="premag-fabrica-banner">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-sm-12 col-xl-4">
-                        <p class="premag-font-18 premag-color-01 premag-primary-font font-weight-bold premag-xl-margin-top-80 premag-xl-margin-bottom-40">A sede fabril da <span class="premag-color-05">PREMAG</span> está instalada nas margens da Rodovia BR-116/RJ, no km 111, em Citrolândia, Magé, RJ. Sua localização permite total integração com a malha rodoviária do Estado do Rio de Janeiro e situa-se junto à Estação de Citrolândia, no ramal ferroviário de acesso a Guapimirim.</p>
-                    </div>
-                    <div class="col-12 col-sm-12 col-xl-7 offset-xl-1 premag-xl-margin-top-80">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.763286892655!2d-43.02101192373152!3d-22.58795502655596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99bad2bf7ed661%3A0xe8cf8da35e7c6264!2sPREMAG%20-%20Sistema%20de%20Constru%C3%A7%C3%B5es%20Ltda.!5e0!3m2!1sen!2sbr!4v1682977210194!5m2!1sen!2sbr" width="762" height="340" style="border:0; width:95%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
     <div class="w-100">
-        <div class="premag-fabrica-content background-color-c12 d-flex flex-row align-items-start">
-            <div class="d-flex">
-                <div class="col-xl-2 col-lg-2 col-md-2 premag-padding-top-132">
-                    <h1 class="premag-page-title color-c11 text-uppercase premag-font-Kanit d-flex justify-content-end align-items-center">Fábrica</h1>
+        <div class="premag-fabrica-content background-color-c12">
+            <div class="row premag-fabrica-paragrafo">
+                <div class="col-12 col-xl-2 col-lg-2 col-md-2 premag-padding-top-132">
+                    <h1 class="premag-page-title color-c11 text-uppercase premag-font-Kanit d-flex align-items-center">Fábrica</h1>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3">
-                    <div class="container premag-padding-top-80 premag-padding-bottom-80 premag-xl-margin-left-0">
+                <div class="container">
+                    <div class="col-12 col-sm-12 col-xl-4">
+                        <p class="premag-fabrica-banner-text premag-font-18 premag-color-01 premag-primary-font font-weight-bold">A sede fabril da <span class="premag-color-05">PREMAG</span> está instalada nas margens da Rodovia BR-116/RJ, no km 111, em Citrolândia, Magé, RJ. Sua localização permite total integração com a malha rodoviária do Estado do Rio de Janeiro e situa-se junto à Estação de Citrolândia, no ramal ferroviário de acesso a Guapimirim.</p>
+                    </div>
+                    <div class="col-12 col-sm-12 col-xl-7 offset-xl-1 premag-xl-margin-top-80">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3683.763286892655!2d-43.02101192373152!3d-22.58795502655596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99bad2bf7ed661%3A0xe8cf8da35e7c6264!2sPREMAG%20-%20Sistema%20de%20Constru%C3%A7%C3%B5es%20Ltda.!5e0!3m2!1sen!2sbr!4v1682977210194!5m2!1sen!2sbr" width="480" height="340" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="row premag-fabrica-paragrafo">
+                
+                <div class="col-12 col-xl-3 col-lg-3 col-md-3">
+                    <div class="container">
                         
-                        <div class="d-flex flex-column justify-content-start align-items-start premag-fabrica-imagens">
+                        <div class="d-flex premag-fabrica-imagens">
                             <img src="../../../assets/images/patio-fabrica.png" alt="Foto da fábrica" class="premag-xl-margin-bottom-40 premag-fabrica-primeira-imagem">
                             <img src="../../../assets/images/central-fabrica.png" alt="Foto da fábrica" class="premag-xl-margin-bottom-40 premag-fabrica-segunda-imagem">
                             <img src="../../../assets/images/armacao-fabrica.png" alt="Foto da fábrica" class="premag-xl-margin-bottom-40 premag-fabrica-terceira-imagem">
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-7 col-lg-7 col-md-7">
+                <div class="col-12 col-xl-7 col-lg-7 col-md-7">
                     <div class="container premag-padding-top-80 premag-padding-bottom-80 premag-xl-margin-left-0">
                         <div class="premag-primary-font premag-font-24 premag-text">
                             <div class="premag-deco-retangulo-05 premag-deco-retangulo-h-05 premag-height-1x background-premag-color-05 premag-deco-w"></div>
@@ -52,5 +55,4 @@
             </div>
         </div>
     </div>
-</div>
 <app-footer></app-footer>
