Módulos de header e footer
Necessário para trabalhar com outros módulos-filhos  sem erros

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -303,7 +303,7 @@ $prefix : premag;
                 .card { height: 675px; }
                 .card-title { font-weight: 700; }
             }
-            .premag-page-title { margin-top: 375px; }
+            .premag-page-title { display: none !important; }
         }
 
     }
