--- a/src/app/pages/construction/construction.component.html
+++ b/src/app/pages/construction/construction.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="obras premag-xl-margin-top-48" id="obras">
     <div class="premag-obras-banner">
         <div class="container">
@@ -23,3 +24,4 @@
         </div>
     </div>
 </div>
+<app-footer></app-footer>
