Responsividade de Produtos e Serviços / Principais Obras

--- a/src/app/elements/card-obras/card-obras.component.html
+++ b/src/app/elements/card-obras/card-obras.component.html
@@ -1,4 +1,4 @@
-        <div class="card premag-xl-margin-bottom-20">
+        <div class="card">
             <img class="card-img-top" src="{{obras.imagem}}" alt="{{obras.alt}}">
             <div class="card-body premag-padding-top-40 premag-padding-bottom-40">
                 <h5 class="card-title premag-font-14 premag-xl-margin-bottom-20 color-c11"> {{obras.titulo}}</h5>
