--- a/src/app/pages/construction/construction.component.html
+++ b/src/app/pages/construction/construction.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="obras premag-xl-margin-top-48" id="obras">
+<div class="premag-obras premag-xl-margin-top-48" id="obras">
     <div class="premag-obras-banner">
         <div class="container">
             <p class="premag-font-18 premag-color-01 premag-primary-font"></p>    
@@ -10,7 +10,7 @@
         <div class="container premag-obras-container premag-padding-top-80 premag-padding-bottom-80">
             <h2 class="premag-page-subtitle premag-secondary-font premag-font-48 text-uppercase color-c2">Principais Obras</h2>
             <div class="premag-deco-retangulo-100 background-premag-color-05 premag-height-1x"></div>
-            <div class="row premag-padding-top-40">
+            <div class="row premag-card-obras">
                 <app-card-obras *ngFor="let itensObras of itensObras" [obras]="itensObras" class="col-lg-4 col-xs-12"></app-card-obras>
             </div>
         </div>
