--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -52,7 +52,8 @@
                             <label for="premagFormMensagem" class="premag-xl-margin-bottom-4 color-c4">Mensagem</label>
                             <textarea class="form-control" id="premagFormMensagem" rows="3"></textarea>
                         </div>
-                        <button type="button" class="btn btn-lg background-premag-color-05 premag-secondary-font text-uppercase premag-font-weight-800 premag-font-24">Enviar</button>
+                        
+                        <app-button label="Enviar" tipo="button"></app-button>
                     </form>
                 </div>
             </div>
