--- a/src/app/pages/tecnology/tecnology.component.html
+++ b/src/app/pages/tecnology/tecnology.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="tecnologia premag-xl-margin-top-48" id="tecnologia">
     <div class="premag-tecnologia-banner">
         <div class="container">
@@ -5,11 +6,11 @@
         </div>
     </div>
     <div class="w-100">
-        <div class="premag-tecnologia-content background-color-c12 d-flex flex-row align-items-start premag-lg-padding-top-120">
+        <div class="premag-tecnologia-content background-color-c12 d-flex flex-column flex-xl-row align-items-start premag-xl-padding-top-120">
             <div class="col-xl-2 col-lg-2">
                 <h1 class="premag-page-title color-c11 text-uppercase premag-font-Kanit d-flex justify-content-end premag-xl-margin-top-200 align-items-center">Tecnologia</h1>
             </div>
-            <div class="col-xl-9 col-lg-10 premag-font-Raleway">
+            <div class="col-xl-10 col-lg-11 premag-font-Raleway">
                 <div class="container premag-tecnologia-container premag-padding-top-160 premag-padding-bottom-200 premag-xl-margin-left-0">
                     <div class="row">
                         <div class="col-lg-8 col-xs-12 premag-font-20 color-c6 premag-padding-right-80 premag-tecnologia-text">
@@ -17,14 +18,14 @@
                             <p>A contínua pesquisa tecnológica e o lançamento de novos produtos adaptados à realidade nacional são práticas constantes no decorrer das atividades da <span class="premag-color-05">PREMAG</span>.</p>
                         </div>
                         <div class="col-lg-4 col-xs-12">
-                            <img class="ml-3" src="../../../assets/images/city-lights.png" alt="luzes da cidade">
+                            <img class="ml-3 w-100" src="../../../assets/images/city-lights.png" alt="luzes da cidade">
                         </div>
                     </div>
-                    <p class="premag-font-20 color-c6 premag-xl-margin-top-80 premag-xl-margin-bottom-40">Concretos de Alto Desempenho (CAD), com utilização de sílica ativa e cimento portland resistente à sulfatos, são usualmente utilizados nas obras sujeitas a trabalho em meio agressivo.</p>
+                    <p class="premag-font-20 color-c6 premag-xl-margin-top-80 premag-xxl-margin-top-80 premag-xl-margin-bottom-40">Concretos de Alto Desempenho (CAD), com utilização de sílica ativa e cimento portland resistente à sulfatos, são usualmente utilizados nas obras sujeitas a trabalho em meio agressivo.</p>
                     <p class="premag-font-20 color-c6 premag-xl-margin-bottom-40">Nova Central de Concreto utiliza misturadores com sistema contra-corrente forçada. Totalmente automatizada, com alto grau de controle, emprega até 7 (sete) agregados diferentes e 2 (dois) tipos de cimento, possibilita a produção industrial dos mais variados tipos de concreto: de alto desempenho-CAD e especiais; secos ou plásticos; leves; coloridos; resistentes à agressividade da água; de altas resistências e qualidade. Atende a ampla diversidade de aplicações aliada a uma produção horária sem concorrência na região.</p>
                     <p class="premag-font-20 color-c6 premag-xl-margin-bottom-40">A <span class="premag-color-05">PREMAG</span> tem como premissa básica, desde a sua criação, a efetivação de elos estreitos integrando Universidade-Estado-Empresa, em benefício da sociedade brasileira.</p>
 
-                    <img class="premag-hero-image w-100 premag-xl-margin-top-80 premag-xl-margin-bottom-80" src="../../../assets/images/tecnologia.png" alt="Tecnologia">
+                    <img class="premag-hero-image w-100" src="../../../assets/images/tecnologia.png" alt="Tecnologia">
 
                     <div class="container premag-font-Raleway">
                         <div class="row">
@@ -32,16 +33,16 @@
                                 <p class="premag-font-20 color-c6">Ensaios já foram executados na COPPE/UFRJ – Coordenação dos Programas de Pós-Graduação em Engenharia da Universidade Federal do Rio de Janeiro, com utilização de vigas protendidas <span class="premag-color-05">PREMAG</span>.</p>
                             </div>
                             <div class="col-lg-5 col-md-12 d-flex flex-row">
-                                <div class="premag-deco-retangulo-h-100 background-premag-color-05 premag-deco-retangulo-05"></div>
-                                <p class="premag-font-20 color-c6 premag-padding-right-40 premag-padding-left-40 premag-no-padding-col">Em 1998, foram testadas seis vigas <span class="premag-color-05">PREMAG</span> com Concreto de Alta Resistência (CAR), atingindo-se valores de até 60 MPa. Os resultados deste trabalho constam da tese de mestrado “Comportamento ao Cisalhamento de Vigas Protendidas”, COPPE, UFRJ, e dos Anais do 40º Reibrac realizado pelo IBRACON – Instituto Brasileiro do Concreto, no Rio de Janeiro, RJ, 1998.</p>
-                                <div class="premag-deco-retangulo-h-100 background-premag-color-05 premag-deco-retangulo-05"></div>
+                                <div class="premag-deco-retangulo-h-100 background-premag-color-05 premag-deco-retangulo-05 border-lg-hidden"></div>
+                                <p class="premag-font-20 color-c6 premag-middle-col">Em 1998, foram testadas seis vigas <span class="premag-color-05">PREMAG</span> com Concreto de Alta Resistência (CAR), atingindo-se valores de até 60 MPa. Os resultados deste trabalho constam da tese de mestrado “Comportamento ao Cisalhamento de Vigas Protendidas”, COPPE, UFRJ, e dos Anais do 40º Reibrac realizado pelo IBRACON – Instituto Brasileiro do Concreto, no Rio de Janeiro, RJ, 1998.</p>
+                                <div class="premag-deco-retangulo-h-100 background-premag-color-05 premag-deco-retangulo-05 border-lg-hidden"></div>
                             </div>
                             <div class="col-lg-4 col-md-12">
                                 <p class="premag-font-20 color-c6 premag-padding-right-12 premag-padding-left-12 premag-no-padding-col">Em 2002 foram feitos estudos para avaliar o comportamento da ligação entre viga e laje pré-fabricadas produzidas pela <span class="premag-color-05">PREMAG</span>. Este trabalho contou com 14 (quatorze) ensaios de vigas com tamanho real e os resultados constam da tese de doutoramento “Comportamento da Ligação entre Lajes e Vigas Pré-fabricadas Feita com Nichos Preenchidos no Local”, COPPE/ UFRJ, e dos Anais das XXXI Jornadas Sud-Americanas de Ingeniería Estructural, Mendoza, Argentina, 2004.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="container premag-xl-margin-top-120 premag-font-Raleway">
+                    <div class="container premag-xl-margin-top-120 premag-xl-margin-bottom-120 premag-font-Raleway">
                         <div class="row">
                             <div class="col-lg-6 col-xs-12 premag-font-20 color-c6">
                                 <p class="premag-xl-margin-bottom-40">Na COPPE realizaram-se estudos teóricos sobre bueiros celulares, bem como nova sistemática para otimização da seção transversal de tabuleiros de pontes e viadutos, utilizando o método dos algoritmos genéticos. Este último estudo consta da dissertação de mestrado “Otimização do Projeto de Pontes Protendidas Pré-moldadas pelo Método dos Algoritmos Genéticos”, COPPE, UFRJ, 2004. Outras pesquisas com concretos utilizando fibras de aço foram desenvolvidas na <span class="premag-color-05">PREMAG</span> por pesquisadores da COPPE/UFRJ, tendo sido apresentadas no 42º Reibrac realizado pelo IBRACON em Fortaleza, CE, 2000.</p>
@@ -57,3 +58,4 @@
         </div>
     </div>
 </div>
+<app-footer></app-footer>
