--- a/src/app/elements/footer/footer.component.html
+++ b/src/app/elements/footer/footer.component.html
@@ -22,4 +22,5 @@
     </div>
 </div>
 
-
+<script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://unpkg.com/slick-carousel@1.6.0/slick/slick.js"></script>
