--- a/src/app/pages/construction/construction.component.html
+++ b/src/app/pages/construction/construction.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="obras premag-xl-margin-top-48" id="obras">
     <div class="premag-obras-banner">
         <div class="container">
@@ -19,7 +20,21 @@
             <h2 class="premag-page-subtitle premag-secondary-font premag-font-48 text-uppercase color-c6">Principais Clientes</h2>
             <div class="premag-deco-retangulo-100 background-premag-color-05 premag-height-1x"></div>
 
-                <app-carousel></app-carousel>
+            <ngx-slick-carousel 
+                class="carousel" 
+                #slickModal="slick-carousel" 
+                [config]="slideConfig" 
+                (init)="slickInit($event)"
+                (breakpoint)="breakpoint($event)"
+                (afterChange)="afterChange($event)"
+                (beforeChange)="beforeChange($event)">
+                <div ngxSlickItem *ngFor="let slide of slides" class="slide">
+                    <img src="{{ slide.img }}" alt="" width="100%">
+                </div>
+            </ngx-slick-carousel>
+            
+            
         </div>
     </div>
 </div>
+<app-footer></app-footer>
