--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -6,7 +6,7 @@
         </div>
     </div>
     <div class="premag-product-content background-color-c12">
-        <div class="row">
+        <div class="row premag-margin-right-0">
             <div class="col-lg-2 premag-product-item-title">
                 <h1 class="premag-page-title color-c11 text-uppercase premag-secondary-font">Produtos e Serviços</h1>
             </div>
